Access modifiers of constant variables were adjusted + improved displaying into console checkpoints