@@ -11,11 +11,11 @@ public class GmawPanel extends AbstractWeldingMethodPanel {
 
     @Override
     public void setComponents() {
-        labelsList.get(0).setBounds(10,0,
+        labelsList.getFirst().setBounds(10,0,
                 WeldingMethodLabels.LABEL_WIDTH, WeldingMethodLabels.LABEL_HEIGHT);
         labelsList.get(1).setBounds(10, 30,
                 WeldingMethodLabels.LABEL_WIDTH, WeldingMethodLabels.LABEL_HEIGHT);
-        textComponentsList.get(0).setBounds(10,60,
+        textComponentsList.getFirst().setBounds(10,60,
                 WeldingMethodTextComponents.TEXT_COMPONENT_WIDTH, WeldingMethodTextComponents.TEXT_COMPONENT_HEIGHT);
 
         weldingMethodLabels.getNameInfo().setText("GMAW");
